RESOLVED FIXED51126
Semi-reproducible crash in ChunkedUpdateDrawingArea::paintIntoUpdateChunk closing a particular yahoo page
https://bugs.webkit.org/show_bug.cgi?id=51126
Summary Semi-reproducible crash in ChunkedUpdateDrawingArea::paintIntoUpdateChunk clo...
Anders Carlsson
Reported 2010-12-15 12:06:26 PST
Semi-reproducible crash in ChunkedUpdateDrawingArea::paintIntoUpdateChunk closing a particular yahoo page
Attachments
Patch (3.63 KB, patch)
2010-12-15 12:07 PST, Anders Carlsson
mjs: review+
Anders Carlsson
Comment 1 2010-12-15 12:06:47 PST
Anders Carlsson
Comment 2 2010-12-15 12:07:39 PST
Maciej Stachowiak
Comment 3 2010-12-15 12:10:17 PST
Comment on attachment 76678 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=76678&action=review > WebKit2/WebProcess/WebPage/ChunkedUpdateDrawingArea.cpp:97 > + // The drawing area changed, return early. This comment seems redundant with the code. > WebKit2/WebProcess/WebPage/LayerBackedDrawingArea.cpp:98 > + // The drawing area changed, return early. This comment seems redundant with the code. > WebKit2/WebProcess/WebPage/mac/LayerBackedDrawingAreaMac.mm:172 > + // The drawing area changed, return early. This comment seems redundant with the code.
Maciej Stachowiak
Comment 4 2010-12-15 12:10:32 PST
(r=me with those suggestions)
Anders Carlsson
Comment 5 2010-12-15 12:15:53 PST
Note You need to log in before you can comment on or make changes to this bug.