2010-12-15  Anders Carlsson  <andersca@apple.com>

Reviewed by Maciej Stachowiak.

        Semi-reproducible crash in ChunkedUpdateDrawingArea::paintIntoUpdateChunk closing a particular yahoo page
        https://bugs.webkit.org/show_bug.cgi?id=51126
        <rdar://problem/8771219>

        Laying out the web page can cause the drawing area to change so we need to protect against this.

        * WebProcess/WebPage/ChunkedUpdateDrawingArea.cpp:
        (WebKit::ChunkedUpdateDrawingArea::display):
        * WebProcess/WebPage/LayerBackedDrawingArea.cpp:
        (WebKit::LayerBackedDrawingArea::display):
        * WebProcess/WebPage/mac/LayerBackedDrawingAreaMac.mm:
        (WebKit::LayerBackedDrawingArea::updateLayoutRunLoopObserverFired):

Canonical link: https://commits.webkit.org/64481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74134 268f45cc-cd09-0410-ab3c-d52691b4dbfc